[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/Partier.gd" type="Script" id=1]
[ext_resource path="res://scenes/TipAnimation.tscn" type="PackedScene" id=2]
[ext_resource path="res://sounds/hurt4.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/partygoer_interested.wav" type="AudioStream" id=4]
[ext_resource path="res://sprites/purple boy/dancing/1purple.png" type="Texture" id=5]
[ext_resource path="res://sprites/purple boy/dancing/2purple.png" type="Texture" id=6]
[ext_resource path="res://sprites/purple boy/dancing/3purple.png" type="Texture" id=7]
[ext_resource path="res://sprites/purple boy/dancing/4purple.png" type="Texture" id=8]
[ext_resource path="res://sprites/purple boy/idle/purple1.png" type="Texture" id=9]
[ext_resource path="res://sprites/purple boy/idle/purple2.png" type="Texture" id=10]
[ext_resource path="res://sprites/purple boy/idle/purple3.png" type="Texture" id=11]
[ext_resource path="res://sprites/purple boy/idle/purple4.png" type="Texture" id=12]
[ext_resource path="res://sounds/coin1.wav" type="AudioStream" id=13]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0

[sub_resource type="Animation" id=2]
resource_name = "dance"
length = 1.09
loop = true
step = 0.27
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.27, 0.54, 0.81 ),
"transitions": PoolRealArray( 2.2974, 34.2967, 3.86375, 2.73208 ),
"update": 0,
"values": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.27, 0.81 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "chatter"
}, {
"args": [  ],
"method": "give_tip"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 1.09
loop = true
step = 0.27
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.27, 0.54, 0.81 ),
"transitions": PoolRealArray( 1, 1, 1, 35.5062 ),
"update": 0,
"values": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ]
}

[sub_resource type="CapsuleShape2D" id=9]
radius = 4.0
height = 10.0

[sub_resource type="Animation" id=8]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Partier" type="RigidBody2D" groups=[
"partier",
"animated",
]]
collision_layer = 3
mode = 2
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
linear_damp = 50.0
script = ExtResource( 1 )
speed = 600
min_move_delay = 2.0
max_move_delay = 5
max_move_duration = 1
TipAnimation = ExtResource( 2 )

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
max_distance = 4000.0

[node name="ChatterSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
max_distance = 1000.0
attenuation = 2.0

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/dance = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
rotation = 1.5708
shape = SubResource( 9 )

[node name="MoveDurationTimer" type="Timer" parent="."]
one_shot = true

[node name="TipSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = -20.0

[node name="HurtAnimation" type="AnimationPlayer" parent="."]
anims/hurt = SubResource( 8 )
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="MoveDurationTimer" to="." method="_on_MoveDurationTimer_timeout"]
